<resources>
  <string name="app_name">MyVintechStake</string>
  <string name="logo">Logo</string>
  <string name="username">username</string>
  <string name="password">password</string>
  <string name="version">Version</string>
  <string name="login">Login</string>
  <string name="value_doge">0.00000000</string>
  <string name="balance">BALANCE</string>
  <string name="doge">DOGE</string>
  <string name="fund">Fund</string>
  <string name="amount">Amount</string>
  <string name="status">Status</string>
  <string name="stake">Stake</string>
  <string name="stop">Stop</string>
  <string name="deposit">Deposit</string>
  <string name="barcode">barcode</string>
  <string name="withdraw_all">Withdraw All</string>
  <string name="logout">Logout</string>
  <string name="high">High</string>
  <string name="result">Result</string>
  <string name="download_new_app">Download New App</string>
</resources>