<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="1sp"
    android:background="@color/Primary"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:weightSum="15">


    <TextView
        android:id="@+id/status"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:baselineAlignBottom="false"
        android:padding="2sp"
        android:text="@string/status"
        android:textAlignment="center"
        android:textColor="@color/textSecondary"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/fund"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="6"
        android:padding="2sp"
        android:text="@string/fund"
        android:textAlignment="center"
        android:textColor="@color/textSecondary"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/high"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:padding="2sp"
        android:text="@string/high"
        android:textAlignment="center"
        android:textColor="@color/textSecondary"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/result"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="6"
        android:padding="2sp"
        android:text="@string/result"
        android:textAlignment="center"
        android:textColor="@color/textSecondary"
        android:textStyle="bold" />

    <!--TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="TextView" /-->
</TableRow>