<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/background">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxHeight="200dp"
        app:srcCompat="@mipmap/ic_launcher_foreground"
        android:contentDescription="@string/logo"
        android:scaleType="fitCenter"
        android:layout_gravity="center"
        android:adjustViewBounds="true"
        android:cropToPadding="true"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card"
        android:padding="10dp"
        android:layout_margin="20dp"
        android:orientation="vertical">

      <Space
          android:layout_width="match_parent"
          android:layout_height="10dp"/>

      <TextView
          android:text="@string/version"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/textViewVersion"
          android:gravity="center"
          android:textColor="@color/colorSecondaryDark"
          android:textStyle="bold"/>

      <Space
          android:layout_width="match_parent"
          android:layout_height="20dp"/>

      <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="textPersonName"
          android:ems="10"
          android:id="@+id/editTextUsername"
          android:background="@drawable/edit_text_2"
          android:hint="@string/username"
          android:drawableStart="@drawable/ic_baseline_account"
          android:drawablePadding="15dp"
          android:drawableTint="@color/textSecondary"
          tools:targetApi="m"
          android:autofillHints="@string/username"/>

      <Space
          android:layout_width="match_parent"
          android:layout_height="10dp"/>

      <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="textPassword"
          android:ems="10"
          android:id="@+id/editTextPassword"
          android:background="@drawable/edit_text_2"
          android:hint="@string/password"
          android:drawableStart="@drawable/ic_baseline_vpn_key"
          android:drawablePadding="15dp"
          android:drawableTint="@color/textSecondary"
          tools:targetApi="m"
          android:autofillHints="@string/password"/>

      <Space
          android:layout_width="match_parent"
          android:layout_height="15dp"/>

      <Button
          android:text="@string/login"
          android:layout_width="200dp"
          android:layout_height="wrap_content"
          android:id="@+id/buttonLogin"
          android:background="@drawable/button"
          android:textColor="@color/textSecondary"
          android:elevation="20dp"
          android:layout_gravity="center"/>

      <Space
          android:layout_width="match_parent"
          android:layout_height="5dp"/>

    </LinearLayout>

  </LinearLayout>

</ScrollView>